--- a/2.html
+++ b/2.html
@@ -115,7 +115,7 @@
                 <h4>Juan Perez</h4>
                 <h6>juanperz@gmail.com</h6>
             </div>
-
+            <a href="3.html">
             <div class="recibos">
                 <div>
                     <h5>Recibos a firmar</h5>
@@ -129,12 +129,15 @@
                     </svg>
                 </div>
             </div>
+            </a>
             <br>
+            <a href="3.html">
             <div class="recibos">
-                <div>
+              <div>
                     <h5>Recibos a firmar</h5>
                     <p>3 Pendientes</p>
-                </div>
+                
+                </div>  
                 <div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="31" height="31" fill="currentColor"
                         class="bi bi-chevron-compact-right" viewBox="0 0 16 16">
@@ -143,7 +146,7 @@
                     </svg>
                 </div>
             </div>
-
+          </a>
         </div>
 
 
