--- a/1.html
+++ b/1.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recibo Digital</title>
+     <link rel="icon" href="imagenes/favicon (2).ico" type="image/x-icon">
+    <link rel="icon" sizes="512x512" href="imagenes/logo(512x512).png">
+    <link rel="icon" sizes="256x256" href="imagenes/logo(256x256).png">
     <link rel="stylesheet" href="styles.css">
 </head>
 
